--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "tpumpy" "\0"
+            VALUE "FileDescription", "home_horizones" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "tpumpy" "\0"
+            VALUE "InternalName", "home_horizones" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "tpumpy.exe" "\0"
-            VALUE "ProductName", "tpumpy" "\0"
+            VALUE "OriginalFilename", "home_horizones.exe" "\0"
+            VALUE "ProductName", "home_horizones" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
